--- a/src/Components/Tours/tours1.scss
+++ b/src/Components/Tours/tours1.scss
@@ -23,12 +23,12 @@
     }
   
     .tour-info {
-      text-align: center;
-      padding: 2rem;
+      padding: 7rem;
   
       h2 {
         color: var(--blackColor);
         font-size: 2rem;
+        text-align: left;
         margin-bottom: 1rem;
       }
   
@@ -51,11 +51,10 @@
         }
   
         .tour-description {
-          text-align: left;
-  
+          
           h3 {
             color: var(--blackColor);
-            font-size: 1.5rem;
+            font-size: 2rem;
             margin-bottom: 0.5rem;
           }
   
@@ -87,9 +86,11 @@
             }
   
             .tour-price {
-              font-size: 1.25rem;
+              text-align: left;
+              font-size: 2rem;
               color: var(--blackColor);
               font-weight: 600;
+              margin-bottom: 2rem;
             }
           }
         }
@@ -118,40 +119,40 @@
     }
   }
   
-  @media screen and (min-width: 768px) {
-    .tour-details {
-      .tour-info {
-        padding: 4rem;
+  // @media screen and (min-width: 768px) {
+  //   .tour-details {
+  //     .tour-info {
+  //       padding: 4rem;
   
-        h2 {
-          font-size: 3rem;
-        }
+  //       h2 {
+  //         font-size: 3rem;
+  //       }
   
-        .tour-details-content {
-          flex-direction: row;
-          text-align: left;
+  //       .tour-details-content {
+  //         flex-direction: row;
+  //         text-align: left;
   
-          .tour-image {
-            width: 50%;
+  //         .tour-image {
+  //           width: 50%;
   
-            img {
-              border-radius: 1rem;
-            }
-          }
+  //           img {
+  //             border-radius: 1rem;
+  //           }
+  //         }
   
-          .tour-description {
-            width: 50%;
+  //         .tour-description {
+  //           width: 50%;
   
-            .tour-details-footer {
-              flex-direction: column;
+  //           .tour-details-footer {
+  //             flex-direction: column;
   
-              .tour-grade {
-                margin-bottom: 0.5rem;
-              }
-            }
-          }
-        }
-      }
-    }
-  }
+  //             .tour-grade {
+  //               margin-bottom: 0.5rem;
+  //             }
+  //           }
+  //         }
+  //       }
+  //     }
+  //   }
+  // }
   
